white space on right side issue solved

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -1,6 +1,7 @@
 .container {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 .hero {
